Implemented some code-splitting to reduce bundle size.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,7 +3,7 @@ $primary: hsl(217, 71%, 53%);
 @import '~bulma/bulma';
 @import '~bulma-badge/src/sass/index';
 @import '~dropzone/dist/dropzone';
-@import '~bulma-calendar/src/sass/index';
+@import '~flatpickr/dist/flatpickr.min.css';
 
 @import 'layout';
 @import 'tokens';
